--- a/WelcomePage.xaml
+++ b/WelcomePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="BTPaint.MainPage"
+    x:Class="BTPaint.WelcomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BTPaint"
