--- a/WelcomePage.xaml
+++ b/WelcomePage.xaml
@@ -1,8 +1,7 @@
-﻿<Page
+﻿<UserControl
     x:Class="BTPaint.WelcomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BTPaint"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -10,13 +9,13 @@
     Width="664"
     Height="498" >
 
-    <Page.Resources>
+    <UserControl.Resources>
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="24"/>
             <Setter Property="Background" Value="#41494E"/>
             <Setter Property="Padding" Value="20 10"/>
         </Style>
-    </Page.Resources>
+    </UserControl.Resources>
 
     <Grid Background="#425450">
         <Grid.RowDefinitions>
@@ -45,4 +44,4 @@
                     Click="exitBtn_Click" />
         </StackPanel>
     </Grid>
-</Page>
+</UserControl>
