Putting an image on the canvas and getting source but doesnt make an image

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -59,6 +59,7 @@
                 DoubleTapped="MainCanvas_DoubleTapped"
                 RightTapped="MainCanvas_RightTapped"
                 Holding="MainCanvas_Holding">
+            <Image x:Name="testImg" />
             <TextBlock x:Name="test"/>
         </Canvas>
 
