--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -49,9 +49,11 @@
         <!-- Collapse Side Bar Button -->
         <AppBarButton x:Name="collapseSideBarBtn" Icon="More" Click="collapseSideBarBtn_Click"/>
 
+        <!--<Image Source="https://cdn.discordapp.com/attachments/639952745159327752/642152685599981579/unknown.png"  Grid.Row="1" Grid.ColumnSpan="2"/>-->
+        <Image Source="ms-appx:///FaceModel.png"  Grid.Row="1" Grid.ColumnSpan="2"/>
         <!-- Canvas -->
+                <!--Background="BlanchedAlmond"-->
         <Canvas x:Name="MainCanvas" Grid.Row="1" Grid.ColumnSpan="2" 
-                Background="BlanchedAlmond"
                 PointerPressed="MainCanvas_PointerPressed"
                 PointerReleased="MainCanvas_PointerReleased"
                 PointerMoved="MainCanvas_PointerMoved"
@@ -59,9 +61,10 @@
                 DoubleTapped="MainCanvas_DoubleTapped"
                 RightTapped="MainCanvas_RightTapped"
                 Holding="MainCanvas_Holding">
-            <Image x:Name="testImg" />
             <TextBlock x:Name="test"/>
         </Canvas>
+        
+        <Image x:Name="testImg" Grid.Row="2" Grid.Column="2"/>
 
         <!-- Side Bar -->
         <SplitView x:Name="SideBar"
