--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -80,13 +80,14 @@
                     </Grid.RowDefinitions>
                     <!-- Color Picker -->
                     <ColorPicker x:Name="colorPicker"
-                            ColorSpectrumShape="Ring">
+                            ColorSpectrumShape="Ring"
+                            Color="Black">
                     </ColorPicker>
 
                     <!-- Sliders & TextBlocks -->
                     <StackPanel Orientation="Vertical" Grid.Row="1">
                         <TextBlock Text="Size" HorizontalAlignment="Center" Margin="0 10 0 0"/>
-                        <Slider x:Name="sizeSlider" Margin="10 0 10 0"/>
+                        <Slider x:Name="sizeSlider" Margin="10 0 10 0" Value="10"/>
                     </StackPanel>
 
                     <!-- List of Brushes : This will be populated in code -->
