--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -66,7 +66,7 @@
                    Grid.ColumnSpan="2"
                    HorizontalAlignment="Left" 
                    Grid.Row="1" 
-                   IsPaneOpen="True"
+                   IsPaneOpen="False"
                    DisplayMode="Overlay">
             <SplitView.Pane>
                 <ScrollViewer VerticalScrollBarVisibility="Visible">
