--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -53,16 +53,10 @@
 
         <!-- Canvas -->
         <ScrollViewer Grid.Row="1" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
-            <Canvas x:Name="MainCanvas"  Grid.Row="1" Grid.ColumnSpan="2"
-                    Background="BlanchedAlmond"
-                    PointerPressed="MainCanvas_PointerPressed"
-                    PointerReleased="MainCanvas_PointerReleased"
-                    PointerExited="MainCanvas_PointerReleased"
-                    Width="800"
-                    Height="600">
-
-                <Image x:Name="ImageControl"/>
-            </Canvas>
+            <local:RasterCanvas x:Name="mainCanvas" 
+                                Background="Transparent"
+                                Size="{Binding ElementName=sizeSlider, Path=Value, Mode=TwoWay}"
+                                DrawColor="{Binding ElementName=colorPicker, Path=Color, Mode=TwoWay}"/>
         </ScrollViewer>
 
         <!-- Side Bar -->
