--- a/UserControls/Join.xaml
+++ b/UserControls/Join.xaml
@@ -22,7 +22,7 @@
     <Grid Background="#425450">
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
-            <RowDefinition/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="3*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -37,17 +37,21 @@
                    VerticalAlignment="Bottom"
                    IsColorFontEnabled="True" 
                    Margin="0 0 0 20"/>
-        <Border Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" 
-                BorderBrush="Black"
-                BorderThickness="2"
-                Background="LightGray" Height="25">
-            <TextBox Text="ENTER THE IP" Foreground="Black"/>
-        </Border>
+        <Rectangle Fill="Black" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" />
+        <TextBox x:Name="ipEnter"
+                 PlaceholderText="Enter IP"
+                 Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" 
+                 BorderBrush="Black"
+                 BorderThickness="2"
+                 Background="LightGray"
+                 Margin="0 0 0 2"
+                 MaxLength="15"
+                 Height="30"/>
         <Button Grid.Row="2" Grid.Column="1"
                 HorizontalAlignment="Center" VerticalAlignment="Top"
-                Content="Join"/>
+                Content="Join" Click="Join_Click"/>
         <Button Grid.Row="2" Grid.Column="2"
                 HorizontalAlignment="Center" VerticalAlignment="Top"
-                Content="Return"/>
+                Content="Return" Click="Return_Click"/>
     </Grid>
 </UserControl>
