--- a/UserControls/Host.xaml
+++ b/UserControls/Host.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<ContentDialog
     x:Class="BTPaint.UserControls.Host"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,7 +9,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <UserControl.Resources>
+    <ContentDialog.Resources>
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="Background" Value="#41494E"/>
@@ -17,7 +17,7 @@
             <Setter Property="Margin" Value="10 10"/>
             <Setter Property="Width" Value="75"/>
         </Style>
-    </UserControl.Resources>
+    </ContentDialog.Resources>
     
     <Grid Background="#425450">
         <Grid.RowDefinitions>
@@ -50,4 +50,4 @@
                 HorizontalAlignment="Center" VerticalAlignment="Top"
                 Content="Return"/>
     </Grid>
-</UserControl>
+</ContentDialog>
