Host to Main return fuctionality

--- a/UserControls/Host.xaml
+++ b/UserControls/Host.xaml
@@ -45,9 +45,11 @@
         </Border>
         <Button Grid.Row="2" Grid.Column="1"
                 HorizontalAlignment="Center" VerticalAlignment="Top"
-                Content="Host"/>
+                Content="Host"
+                Click="Host_Click"/>
         <Button Grid.Row="2" Grid.Column="2"
                 HorizontalAlignment="Center" VerticalAlignment="Top"
-                Content="Return"/>
+                Content="Return"
+                Click="Return_Click"/>
     </Grid>
 </ContentDialog>
