--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -58,7 +58,10 @@
             <local:RasterCanvas x:Name="mainCanvas" 
                                 Background="White"
                                 Size="{Binding ElementName=sizeSlider, Path=Value, Mode=TwoWay}"
-                                DrawColor="{Binding ElementName=colorPicker, Path=Color, Mode=TwoWay}"/>
+                                DrawColor="{Binding ElementName=colorPicker, Path=Color, Mode=TwoWay}"
+                                Height="2000"
+                                Width="2000"/>
+            <!-- Height and Width set to enable scroll bars, DO NOT CHANGE -->
         </ScrollViewer>
 
 
