--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -12,6 +12,7 @@
     <Page.Resources>
         <BitmapImage x:Key="pencilImage" UriSource="Assets/Icons/pencil.png"/>
         <BitmapImage x:Key="eraserImage" UriSource="Assets/Icons/eraser.png"/>
+        <BitmapImage x:Key="starImage" UriSource="Assets/Icons/star.png"/>
     </Page.Resources>
     
     <!-- Grid Definitions -->
@@ -27,23 +28,45 @@
                 <!-- File Button -->
                 <AppBarButton.Flyout>
                     <Flyout>
+                        <Flyout.FlyoutPresenterStyle>
+                            <Style TargetType="FlyoutPresenter">
+                                <Setter Property="Padding" Value="5"/>
+                                <Setter Property="Margin" Value="0 -5 0 0"/>
+                                <Setter Property="BorderBrush" Value="Black"/>
+                                <Setter Property="BorderThickness" Value="2"/>
+                            </Style>
+                        </Flyout.FlyoutPresenterStyle>
                         <StackPanel Orientation="Vertical">
-                            <AppBarButton x:Name="saveBtn" Label="Save" Icon="Save"  Click="saveBtn_Click"></AppBarButton>
-                            <AppBarButton x:Name="loadBtn" Label="Load" Icon="Download" Click="loadBtn_Click"></AppBarButton>
-                            <AppBarButton x:Name="exitBtn" Label="Exit" Icon="Clear" Click="exitBtn_Click" Foreground="Red"></AppBarButton>
+                            <MenuFlyoutItem x:Name="saveBtn" Text="Save" HorizontalContentAlignment="Center" Click="saveBtn_Click"></MenuFlyoutItem>
+                            <MenuFlyoutSeparator/>
+                            <MenuFlyoutItem x:Name="loadBtn" Text="Load" HorizontalContentAlignment="Center" Click="loadBtn_Click"></MenuFlyoutItem>
+                            <MenuFlyoutSeparator/>
+                            <MenuFlyoutItem x:Name="exitBtn" Text="Exit" HorizontalContentAlignment="Center" Click="exitBtn_Click" Foreground="Red"></MenuFlyoutItem>
                         </StackPanel>
                     </Flyout>
                 </AppBarButton.Flyout>
             </AppBarButton>
 
+            <!--<AppBarSeparator IsFocusEngaged="False"/>-->
+
             <!-- Edit Button -->
             <AppBarButton Icon="Edit"  Label="Edit">
                 <AppBarButton.Flyout>
                     <Flyout>
+                        <Flyout.FlyoutPresenterStyle>
+                            <Style TargetType="FlyoutPresenter">
+                                <Setter Property="Padding" Value="5"/>
+                                <Setter Property="Margin" Value="0 -5 0 0"/>
+                                <Setter Property="BorderBrush" Value="Black"/>
+                                <Setter Property="BorderThickness" Value="2"/>
+                            </Style>
+                        </Flyout.FlyoutPresenterStyle>
                         <StackPanel Orientation="Vertical">
-                            <AppBarButton x:Name="resizeBtn" Label="Resize" Icon="FullScreen" Click="resizeBtn_Click"></AppBarButton>
-                            <AppBarButton x:Name="importBtn" Label="Import" Icon="Import" Click="importBtn_Click"></AppBarButton>
-                            <AppBarButton x:Name="clearBtn" Label="Clear" Icon="Delete" Click="clearBtn_Click" Foreground="Red"></AppBarButton>
+                            <MenuFlyoutItem x:Name="resizeBtn" Text="Fullscreen" HorizontalContentAlignment="Center" Click="resizeBtn_Click"></MenuFlyoutItem>
+                            <MenuFlyoutSeparator/>
+                            <MenuFlyoutItem x:Name="importBtn" Text="Import" HorizontalContentAlignment="Center" Click="importBtn_Click"></MenuFlyoutItem>
+                            <MenuFlyoutSeparator/>
+                            <MenuFlyoutItem x:Name="clearBtn" Text="Clear" HorizontalContentAlignment="Center" Click="clearBtn_Click" Foreground="Red"></MenuFlyoutItem>
                         </StackPanel>
                     </Flyout>
                 </AppBarButton.Flyout>
@@ -88,7 +111,7 @@
                             <TextBlock Text="Size" HorizontalAlignment="Center" Margin="0 10 0 0"/>
                             <Slider x:Name="sizeSlider" Margin="10 0 10 0" Value="10" Minimum="1" Maximum="100"/>
 
-                                <!-- Pencil & Eraser Buttons -->
+                                <!-- Side Bar Buttons -->
                             <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" Margin="10">
                                 <Button x:Name="pencilBtn" Margin="10" Height="50" Width="50" Click="pencilBtn_Click" Background="White">
                                     <Button.Content>
@@ -97,7 +120,12 @@
                                 </Button>
                                 <Button x:Name="eraserBtn" Margin="10" Height="50" Width="50" Click="eraserBtn_Click" Background="Gray">
                                     <Button.Content>
-                                        <Image Source="{StaticResource ResourceKey=eraserImage}" />
+                                        <Image Source="{StaticResource ResourceKey=eraserImage}"/>
+                                    </Button.Content>
+                                </Button>
+                                <Button x:Name="starBtn" Margin="10" Height="50" Width="50" Click="starBtn_Click" Background="Gray">
+                                    <Button.Content>
+                                        <Image Source="{StaticResource ResourceKey=starImage}"/>
                                     </Button.Content>
                                 </Button>
                             </StackPanel>
